--- a/style/style.css
+++ b/style/style.css
@@ -355,3 +355,9 @@ footer {
   justify-content: space-around;
   padding-top: 31px;
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  body {
+    zoom: 80%;
+  }
+}
